# market-data-aggregator

./: Cargo.toml  README.md
binance_samples/: partial_book_depth_payload.json
bitstamp_samples/: app.html  heartbeat_ping.json  heartbeat_pong.json  orderbook_data.json  request_reconnect.json  subcription_succeeded.json  subscribe.json
src/: binance.rs  bitstamp.rs  grpc.rs  lib.rs  logic.rs  main.rs  model.rs  order_book.rs
