[package]
name = "keyrock-tech-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-channel = "0.3.21"
futures-util = "0.3"
tokio = { version = "1.18.2", default-features = false, features = ["io-std", "io-util", "macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.17.1", features = ["rustls-tls-native-roots"] }
url = "2.2.2"
